Fix for svg support on safari and firefox.

--- a/src/components/CoffeeSelection/styles.module.scss
+++ b/src/components/CoffeeSelection/styles.module.scss
@@ -32,13 +32,13 @@
 
   .imgContainer {
 
-    min-height: 200px;
+    min-height: 300px;
     display: flex;
     align-items: flex-end;
     justify-content: center;
     padding: 0 0 30px 0;
 
-    img {
+    svg {
 
       width: 100%;
 
@@ -87,8 +87,14 @@
 
 }
 
-:global(.box1) {
+:global(.singleBox) {
 
-  max-width: 50%;
+  max-width: 84px;
+
+}
+
+:global(.multipleBoxes) {
+
+  max-width: 160px;
 
 }
